lexer_parser/parser.out
Grammar:

Rule 0     S' -> globals
Rule 1     globals -> empty
Rule 2     globals -> block_statements
Rule 3     globals -> statements
Rule 4     globals -> statement globals
Rule 5     const -> STRING_V
Rule 6     const -> BOOL_V
Rule 7     const -> FLOAT_V
Rule 8     const -> INT_V
Rule 9     tens -> L_BRACKET expr tens_1
Rule 10    tens_1 -> COMMA expr tens_1
Rule 11    tens_1 -> R_BRACKET
Rule 12    tens_id -> ID tens_id_1
Rule 13    tens_id_1 -> L_BRACKET expr R_BRACKET tens_id_1
Rule 14    tens_id_1 -> L_BRACKET expr R_BRACKET
Rule 15    block -> ignored_newlines L_BRACE block_1 R_BRACE
Rule 16    block_1 -> empty
Rule 17    block_1 -> ret block_1
Rule 18    block_1 -> statement block_1
Rule 19    const_type -> GPU_BOOL_T
Rule 20    const_type -> GPU_FLOAT_T
Rule 21    const_type -> GPU_INT_T
Rule 22    const_type -> BOOL_T
Rule 23    const_type -> STRING_T
Rule 24    const_type -> FLOAT_T
Rule 25    const_type -> INT_T
Rule 26    expr -> t_expr OR expr
Rule 27    expr -> t_expr
Rule 28    t_expr -> g_expr AND t_expr
Rule 29    t_expr -> g_expr
Rule 30    g_expr -> m_expr comparison m_expr
Rule 31    g_expr -> m_expr
Rule 32    comparison -> LEQT
Rule 33    comparison -> GEQT
Rule 34    comparison -> LT
Rule 35    comparison -> GT
Rule 36    comparison -> NOT_EQ
Rule 37    comparison -> EQ
Rule 38    m_expr -> term MINUS m_expr
Rule 39    m_expr -> term PLUS m_expr
Rule 40    m_expr -> term
Rule 41    term -> exp_factor MOD term
Rule 42    term -> exp_factor DIV term
Rule 43    term -> exp_factor MULT term
Rule 44    term -> exp_factor
Rule 45    exp_factor -> factor EXP exp_factor
Rule 46    exp_factor -> factor
Rule 47    factor -> MINUS factor_1
Rule 48    factor -> PLUS factor_1
Rule 49    factor -> NOT factor_1
Rule 50    factor -> factor_1
Rule 51    factor_1 -> tens_id
Rule 52    factor_1 -> tens
Rule 53    factor_1 -> func_call
Rule 54    factor_1 -> ID
Rule 55    factor_1 -> const
Rule 56    factor_1 -> L_PAREN expr R_PAREN
Rule 57    read_line -> READ_LINE L_PAREN R_PAREN
Rule 58    print_rule -> PRINT L_PAREN func_call_1
Rule 59    read_file -> READ_FILE L_PAREN R_PAREN
Rule 60    write_file -> WRITE_FILE L_PAREN func_call_1
Rule 61    func_call -> ID L_PAREN func_call_1
Rule 62    func_call_1 -> expr COMMA func_call_1
Rule 63    func_call_1 -> expr R_PAREN
Rule 64    func_call_1 -> R_PAREN
Rule 65    assign -> ID ASSIG expr
Rule 66    var -> LET var_1
Rule 67    var_1 -> var_2 COMMA var_1
Rule 68    var_1 -> var_2
Rule 69    var_2 -> var_3 ASSIG expr
Rule 70    var_2 -> var_3
Rule 71    var_3 -> var_id COLON const_type
Rule 72    var_id -> ID var_id_1
Rule 73    var_id -> ID
Rule 74    var_id_1 -> L_BRACKET INT_V R_BRACKET var_id_1
Rule 75    var_id_1 -> L_BRACKET INT_V R_BRACKET
Rule 76    while_loop -> WHILE L_PAREN expr R_PAREN block
Rule 77    for_loop -> FOR L_PAREN var SEMICOLON expr SEMICOLON assign R_PAREN block
Rule 78    cond -> IF L_PAREN expr R_PAREN block cond_prima
Rule 79    cond_prima -> cond_else_if
Rule 80    cond_prima -> cond_else
Rule 81    cond_prima -> empty
Rule 82    cond_else -> ELSE block
Rule 83    cond_else_if -> else_if cond_else_if
Rule 84    cond_else_if -> else_if
Rule 85    else_if -> ELSE_IF L_PAREN expr R_PAREN block
Rule 86    func -> LET ID L_PAREN func_params R_PAREN COLON func_type block
Rule 87    func_params -> func_params_1
Rule 88    func_params -> empty
Rule 89    func_params_1 -> ID COLON const_type COMMA func_params_1
Rule 90    func_params_1 -> ID COLON const_type
Rule 91    func_type -> VOID
Rule 92    func_type -> const_type
Rule 93    ret -> RETURN expr eos
Rule 94    statement -> NEWLINE
Rule 95    statement -> block_statements NEWLINE
Rule 96    statement -> statements eos
Rule 97    statements -> func_call
Rule 98    statements -> write_file
Rule 99    statements -> read_file
Rule 100   statements -> print_rule
Rule 101   statements -> read_line
Rule 102   statements -> assign
Rule 103   statements -> var
Rule 104   block_statements -> func
Rule 105   block_statements -> cond_else_if
Rule 106   block_statements -> cond_else
Rule 107   block_statements -> cond
Rule 108   block_statements -> for_loop
Rule 109   block_statements -> while_loop
Rule 110   eos -> NEWLINE
Rule 111   eos -> SEMICOLON
Rule 112   empty -> <empty>
Rule 113   ignored_newlines -> empty
Rule 114   ignored_newlines -> NEWLINE ignored_newlines

Terminals, with rules where they appear:

AND                  : 28
ASSIG                : 65 69
BOOL_T               : 22
BOOL_V               : 6
COLON                : 71 86 89 90
COMMA                : 10 62 67 89
DIV                  : 42
ELSE                 : 82
ELSE_IF              : 85
EQ                   : 37
EXP                  : 45
FLOAT_T              : 24
FLOAT_V              : 7
FOR                  : 77
GEQT                 : 33
GPU_BOOL_T           : 19
GPU_FLOAT_T          : 20
GPU_INT_T            : 21
GT                   : 35
ID                   : 12 54 61 65 72 73 86 89 90
IF                   : 78
INT_T                : 25
INT_V                : 8 74 75
LEQT                 : 32
LET                  : 66 86
LT                   : 34
L_BRACE              : 15
L_BRACKET            : 9 13 14 74 75
L_PAREN              : 56 57 58 59 60 61 76 77 78 85 86
MINUS                : 38 47
MOD                  : 41
MULT                 : 43
NEWLINE              : 94 95 110 114
NOT                  : 49
NOT_EQ               : 36
OR                   : 26
PLUS                 : 39 48
PRINT                : 58
READ_FILE            : 59
READ_LINE            : 57
RETURN               : 93
R_BRACE              : 15
R_BRACKET            : 11 13 14 74 75
R_PAREN              : 56 57 59 63 64 76 77 78 85 86
SEMICOLON            : 77 77 111
STRING_T             : 23
STRING_V             : 5
VOID                 : 91
WHILE                : 76
WRITE_FILE           : 60
error                : 

Nonterminals, with rules where they appear:

assign               : 77 102
block                : 76 77 78 82 85 86
block_1              : 15 17 18
block_statements     : 2 95
comparison           : 30
cond                 : 107
cond_else            : 80 106
cond_else_if         : 79 83 105
cond_prima           : 78
const                : 55
const_type           : 71 89 90 92
else_if              : 83 84
empty                : 1 16 81 88 113
eos                  : 93 96
exp_factor           : 41 42 43 44 45
expr                 : 9 10 13 14 26 56 62 63 65 69 76 77 78 85 93
factor               : 45 46
factor_1             : 47 48 49 50
for_loop             : 108
func                 : 104
func_call            : 53 97
func_call_1          : 58 60 61 62
func_params          : 86
func_params_1        : 87 89
func_type            : 86
g_expr               : 28 29
globals              : 4 0
ignored_newlines     : 15 114
m_expr               : 30 30 31 38 39
print_rule           : 100
read_file            : 99
read_line            : 101
ret                  : 17
statement            : 4 18
statements           : 3 96
t_expr               : 26 27 28
tens                 : 52
tens_1               : 9 10
tens_id              : 51
tens_id_1            : 12 13
term                 : 38 39 40 41 42 43
var                  : 77 103
var_1                : 66 67
var_2                : 67 68
var_3                : 69 70
var_id               : 71
var_id_1             : 72 74
while_loop           : 109
write_file           : 98


state 0

    (0) S' -> . globals
    (1) globals -> . empty
    (2) globals -> . block_statements
    (3) globals -> . statements
    (4) globals -> . statement globals
    (112) empty -> .
    (104) block_statements -> . func
    (105) block_statements -> . cond_else_if
    (106) block_statements -> . cond_else
    (107) block_statements -> . cond
    (108) block_statements -> . for_loop
    (109) block_statements -> . while_loop
    (97) statements -> . func_call
    (98) statements -> . write_file
    (99) statements -> . read_file
    (100) statements -> . print_rule
    (101) statements -> . read_line
    (102) statements -> . assign
    (103) statements -> . var
    (94) statement -> . NEWLINE
    (95) statement -> . block_statements NEWLINE
    (96) statement -> . statements eos
    (86) func -> . LET ID L_PAREN func_params R_PAREN COLON func_type block
    (83) cond_else_if -> . else_if cond_else_if
    (84) cond_else_if -> . else_if
    (82) cond_else -> . ELSE block
    (78) cond -> . IF L_PAREN expr R_PAREN block cond_prima
    (77) for_loop -> . FOR L_PAREN var SEMICOLON expr SEMICOLON assign R_PAREN block
    (76) while_loop -> . WHILE L_PAREN expr R_PAREN block
    (61) func_call -> . ID L_PAREN func_call_1
    (60) write_file -> . WRITE_FILE L_PAREN func_call_1
    (59) read_file -> . READ_FILE L_PAREN R_PAREN
    (58) print_rule -> . PRINT L_PAREN func_call_1
    (57) read_line -> . READ_LINE L_PAREN R_PAREN
    (65) assign -> . ID ASSIG expr
    (66) var -> . LET var_1
    (85) else_if -> . ELSE_IF L_PAREN expr R_PAREN block
    $end            reduce using rule 112 (empty -> .)
    NEWLINE         shift and go to state 19
    LET             shift and go to state 20
    ELSE            shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    ID              shift and go to state 21
    WRITE_FILE      shift and go to state 27
    READ_FILE       shift and go to state 28
    PRINT           shift and go to state 29
    READ_LINE       shift and go to state 30
    ELSE_IF         shift and go to state 31

    globals                        shift and go to state 1
    empty                          shift and go to state 2
    block_statements               shift and go to state 3
    statements                     shift and go to state 4
    statement                      shift and go to state 5
    func                           shift and go to state 6
    cond_else_if                   shift and go to state 7
    cond_else                      shift and go to state 8
    cond                           shift and go to state 9
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    func_call                      shift and go to state 12
    write_file                     shift and go to state 13
    read_file                      shift and go to state 14
    print_rule                     shift and go to state 15
    read_line                      shift and go to state 16
    assign                         shift and go to state 17
    var                            shift and go to state 18
    else_if                        shift and go to state 22

state 1

    (0) S' -> globals .


state 2

    (1) globals -> empty .
    $end            reduce using rule 1 (globals -> empty .)


state 3

    (2) globals -> block_statements .
    (95) statement -> block_statements . NEWLINE
    $end            reduce using rule 2 (globals -> block_statements .)
    NEWLINE         shift and go to state 32


state 4

    (3) globals -> statements .
    (96) statement -> statements . eos
    (110) eos -> . NEWLINE
    (111) eos -> . SEMICOLON
    $end            reduce using rule 3 (globals -> statements .)
    NEWLINE         shift and go to state 34
    SEMICOLON       shift and go to state 35

    eos                            shift and go to state 33

state 5

    (4) globals -> statement . globals
    (1) globals -> . empty
    (2) globals -> . block_statements
    (3) globals -> . statements
    (4) globals -> . statement globals
    (112) empty -> .
    (104) block_statements -> . func
    (105) block_statements -> . cond_else_if
    (106) block_statements -> . cond_else
    (107) block_statements -> . cond
    (108) block_statements -> . for_loop
    (109) block_statements -> . while_loop
    (97) statements -> . func_call
    (98) statements -> . write_file
    (99) statements -> . read_file
    (100) statements -> . print_rule
    (101) statements -> . read_line
    (102) statements -> . assign
    (103) statements -> . var
    (94) statement -> . NEWLINE
    (95) statement -> . block_statements NEWLINE
    (96) statement -> . statements eos
    (86) func -> . LET ID L_PAREN func_params R_PAREN COLON func_type block
    (83) cond_else_if -> . else_if cond_else_if
    (84) cond_else_if -> . else_if
    (82) cond_else -> . ELSE block
    (78) cond -> . IF L_PAREN expr R_PAREN block cond_prima
    (77) for_loop -> . FOR L_PAREN var SEMICOLON expr SEMICOLON assign R_PAREN block
    (76) while_loop -> . WHILE L_PAREN expr R_PAREN block
    (61) func_call -> . ID L_PAREN func_call_1
    (60) write_file -> . WRITE_FILE L_PAREN func_call_1
    (59) read_file -> . READ_FILE L_PAREN R_PAREN
    (58) print_rule -> . PRINT L_PAREN func_call_1
    (57) read_line -> . READ_LINE L_PAREN R_PAREN
    (65) assign -> . ID ASSIG expr
    (66) var -> . LET var_1
    (85) else_if -> . ELSE_IF L_PAREN expr R_PAREN block
    $end            reduce using rule 112 (empty -> .)
    NEWLINE         shift and go to state 19
    LET             shift and go to state 20
    ELSE            shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    ID              shift and go to state 21
    WRITE_FILE      shift and go to state 27
    READ_FILE       shift and go to state 28
    PRINT           shift and go to state 29
    READ_LINE       shift and go to state 30
    ELSE_IF         shift and go to state 31

    statement                      shift and go to state 5
    globals                        shift and go to state 36
    empty                          shift and go to state 2
    block_statements               shift and go to state 3
    statements                     shift and go to state 4
    func                           shift and go to state 6
    cond_else_if                   shift and go to state 7
    cond_else                      shift and go to state 8
    cond                           shift and go to state 9
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    func_call                      shift and go to state 12
    write_file                     shift and go to state 13
    read_file                      shift and go to state 14
    print_rule                     shift and go to state 15
    read_line                      shift and go to state 16
    assign                         shift and go to state 17
    var                            shift and go to state 18
    else_if                        shift and go to state 22

state 6

    (104) block_statements -> func .
    NEWLINE         reduce using rule 104 (block_statements -> func .)
    $end            reduce using rule 104 (block_statements -> func .)


state 7

    (105) block_statements -> cond_else_if .
    NEWLINE         reduce using rule 105 (block_statements -> cond_else_if .)
    $end            reduce using rule 105 (block_statements -> cond_else_if .)


state 8

    (106) block_statements -> cond_else .
    NEWLINE         reduce using rule 106 (block_statements -> cond_else .)
    $end            reduce using rule 106 (block_statements -> cond_else .)


state 9

    (107) block_statements -> cond .
    NEWLINE         reduce using rule 107 (block_statements -> cond .)
    $end            reduce using rule 107 (block_statements -> cond .)


state 10

    (108) block_statements -> for_loop .
    NEWLINE         reduce using rule 108 (block_statements -> for_loop .)
    $end            reduce using rule 108 (block_statements -> for_loop .)


state 11

    (109) block_statements -> while_loop .
    NEWLINE         reduce using rule 109 (block_statements -> while_loop .)
    $end            reduce using rule 109 (block_statements -> while_loop .)


state 12

    (97) statements -> func_call .
    NEWLINE         reduce using rule 97 (statements -> func_call .)
    SEMICOLON       reduce using rule 97 (statements -> func_call .)
    $end            reduce using rule 97 (statements -> func_call .)


state 13

    (98) statements -> write_file .
    NEWLINE         reduce using rule 98 (statements -> write_file .)
    SEMICOLON       reduce using rule 98 (statements -> write_file .)
    $end            reduce using rule 98 (statements -> write_file .)


state 14

    (99) statements -> read_file .
    NEWLINE         reduce using rule 99 (statements -> read_file .)
    SEMICOLON       reduce using rule 99 (statements -> read_file .)
    $end            reduce using rule 99 (statements -> read_file .)


state 15

    (100) statements -> print_rule .
    NEWLINE         reduce using rule 100 (statements -> print_rule .)
    SEMICOLON       reduce using rule 100 (statements -> print_rule .)
    $end            reduce using rule 100 (statements -> print_rule .)


state 16

    (101) statements -> read_line .
    NEWLINE         reduce using rule 101 (statements -> read_line .)
    SEMICOLON       reduce using rule 101 (statements -> read_line .)
    $end            reduce using rule 101 (statements -> read_line .)


state 17

    (102) statements -> assign .
    NEWLINE         reduce using rule 102 (statements -> assign .)
    SEMICOLON       reduce using rule 102 (statements -> assign .)
    $end            reduce using rule 102 (statements -> assign .)


state 18

    (103) statements -> var .
    NEWLINE         reduce using rule 103 (statements -> var .)
    SEMICOLON       reduce using rule 103 (statements -> var .)
    $end            reduce using rule 103 (statements -> var .)


state 19

    (94) statement -> NEWLINE .
    NEWLINE         reduce using rule 94 (statement -> NEWLINE .)
    LET             reduce using rule 94 (statement -> NEWLINE .)
    ELSE            reduce using rule 94 (statement -> NEWLINE .)
    IF              reduce using rule 94 (statement -> NEWLINE .)
    FOR             reduce using rule 94 (statement -> NEWLINE .)
    WHILE           reduce using rule 94 (statement -> NEWLINE .)
    ID              reduce using rule 94 (statement -> NEWLINE .)
    WRITE_FILE      reduce using rule 94 (statement -> NEWLINE .)
    READ_FILE       reduce using rule 94 (statement -> NEWLINE .)
    PRINT           reduce using rule 94 (statement -> NEWLINE .)
    READ_LINE       reduce using rule 94 (statement -> NEWLINE .)
    ELSE_IF         reduce using rule 94 (statement -> NEWLINE .)
    $end            reduce using rule 94 (statement -> NEWLINE .)
    RETURN          reduce using rule 94 (statement -> NEWLINE .)
    R_BRACE         reduce using rule 94 (statement -> NEWLINE .)


state 20

    (86) func -> LET . ID L_PAREN func_params R_PAREN COLON func_type block
    (66) var -> LET . var_1
    (67) var_1 -> . var_2 COMMA var_1
    (68) var_1 -> . var_2
    (69) var_2 -> . var_3 ASSIG expr
    (70) var_2 -> . var_3
    (71) var_3 -> . var_id COLON const_type
    (72) var_id -> . ID var_id_1
    (73) var_id -> . ID
    ID              shift and go to state 37

    var_1                          shift and go to state 38
    var_2                          shift and go to state 39
    var_3                          shift and go to state 40
    var_id                         shift and go to state 41

state 21

    (61) func_call -> ID . L_PAREN func_call_1
    (65) assign -> ID . ASSIG expr
    L_PAREN         shift and go to state 42
    ASSIG           shift and go to state 43


state 22

    (83) cond_else_if -> else_if . cond_else_if
    (84) cond_else_if -> else_if .
    (83) cond_else_if -> . else_if cond_else_if
    (84) cond_else_if -> . else_if
    (85) else_if -> . ELSE_IF L_PAREN expr R_PAREN block
    NEWLINE         reduce using rule 84 (cond_else_if -> else_if .)
    $end            reduce using rule 84 (cond_else_if -> else_if .)
    ELSE_IF         shift and go to state 31

    else_if                        shift and go to state 22
    cond_else_if                   shift and go to state 44

state 23

    (82) cond_else -> ELSE . block
    (15) block -> . ignored_newlines L_BRACE block_1 R_BRACE
    (113) ignored_newlines -> . empty
    (114) ignored_newlines -> . NEWLINE ignored_newlines
    (112) empty -> .
    NEWLINE         shift and go to state 48
    L_BRACE         reduce using rule 112 (empty -> .)

    block                          shift and go to state 45
    ignored_newlines               shift and go to state 46
    empty                          shift and go to state 47

state 24

    (78) cond -> IF . L_PAREN expr R_PAREN block cond_prima
    L_PAREN         shift and go to state 49


state 25

    (77) for_loop -> FOR . L_PAREN var SEMICOLON expr SEMICOLON assign R_PAREN block
    L_PAREN         shift and go to state 50


state 26

    (76) while_loop -> WHILE . L_PAREN expr R_PAREN block
    L_PAREN         shift and go to state 51


state 27

    (60) write_file -> WRITE_FILE . L_PAREN func_call_1
    L_PAREN         shift and go to state 52


state 28

    (59) read_file -> READ_FILE . L_PAREN R_PAREN
    L_PAREN         shift and go to state 53


state 29

    (58) print_rule -> PRINT . L_PAREN func_call_1
    L_PAREN         shift and go to state 54


state 30

    (57) read_line -> READ_LINE . L_PAREN R_PAREN
    L_PAREN         shift and go to state 55


state 31

    (85) else_if -> ELSE_IF . L_PAREN expr R_PAREN block
    L_PAREN         shift and go to state 56


state 32

    (95) statement -> block_statements NEWLINE .
    NEWLINE         reduce using rule 95 (statement -> block_statements NEWLINE .)
    LET             reduce using rule 95 (statement -> block_statements NEWLINE .)
    ELSE            reduce using rule 95 (statement -> block_statements NEWLINE .)
    IF              reduce using rule 95 (statement -> block_statements NEWLINE .)
    FOR             reduce using rule 95 (statement -> block_statements NEWLINE .)
    WHILE           reduce using rule 95 (statement -> block_statements NEWLINE .)
    ID              reduce using rule 95 (statement -> block_statements NEWLINE .)
    WRITE_FILE      reduce using rule 95 (statement -> block_statements NEWLINE .)
    READ_FILE       reduce using rule 95 (statement -> block_statements NEWLINE .)
    PRINT           reduce using rule 95 (statement -> block_statements NEWLINE .)
    READ_LINE       reduce using rule 95 (statement -> block_statements NEWLINE .)
    ELSE_IF         reduce using rule 95 (statement -> block_statements NEWLINE .)
    $end            reduce using rule 95 (statement -> block_statements NEWLINE .)
    RETURN          reduce using rule 95 (statement -> block_statements NEWLINE .)
    R_BRACE         reduce using rule 95 (statement -> block_statements NEWLINE .)


state 33

    (96) statement -> statements eos .
    NEWLINE         reduce using rule 96 (statement -> statements eos .)
    LET             reduce using rule 96 (statement -> statements eos .)
    ELSE            reduce using rule 96 (statement -> statements eos .)
    IF              reduce using rule 96 (statement -> statements eos .)
    FOR             reduce using rule 96 (statement -> statements eos .)
    WHILE           reduce using rule 96 (statement -> statements eos .)
    ID              reduce using rule 96 (statement -> statements eos .)
    WRITE_FILE      reduce using rule 96 (statement -> statements eos .)
    READ_FILE       reduce using rule 96 (statement -> statements eos .)
    PRINT           reduce using rule 96 (statement -> statements eos .)
    READ_LINE       reduce using rule 96 (statement -> statements eos .)
    ELSE_IF         reduce using rule 96 (statement -> statements eos .)
    $end            reduce using rule 96 (statement -> statements eos .)
    RETURN          reduce using rule 96 (statement -> statements eos .)
    R_BRACE         reduce using rule 96 (statement -> statements eos .)


state 34

    (110) eos -> NEWLINE .
    NEWLINE         reduce using rule 110 (eos -> NEWLINE .)
    LET             reduce using rule 110 (eos -> NEWLINE .)
    ELSE            reduce using rule 110 (eos -> NEWLINE .)
    IF              reduce using rule 110 (eos -> NEWLINE .)
    FOR             reduce using rule 110 (eos -> NEWLINE .)
    WHILE           reduce using rule 110 (eos -> NEWLINE .)
    ID              reduce using rule 110 (eos -> NEWLINE .)
    WRITE_FILE      reduce using rule 110 (eos -> NEWLINE .)
    READ_FILE       reduce using rule 110 (eos -> NEWLINE .)
    PRINT           reduce using rule 110 (eos -> NEWLINE .)
    READ_LINE       reduce using rule 110 (eos -> NEWLINE .)
    ELSE_IF         reduce using rule 110 (eos -> NEWLINE .)
    $end            reduce using rule 110 (eos -> NEWLINE .)
    RETURN          reduce using rule 110 (eos -> NEWLINE .)
    R_BRACE         reduce using rule 110 (eos -> NEWLINE .)


state 35

    (111) eos -> SEMICOLON .
    NEWLINE         reduce using rule 111 (eos -> SEMICOLON .)
    LET             reduce using rule 111 (eos -> SEMICOLON .)
    ELSE            reduce using rule 111 (eos -> SEMICOLON .)
    IF              reduce using rule 111 (eos -> SEMICOLON .)
    FOR             reduce using rule 111 (eos -> SEMICOLON .)
    WHILE           reduce using rule 111 (eos -> SEMICOLON .)
    ID              reduce using rule 111 (eos -> SEMICOLON .)
    WRITE_FILE      reduce using rule 111 (eos -> SEMICOLON .)
    READ_FILE       reduce using rule 111 (eos -> SEMICOLON .)
    PRINT           reduce using rule 111 (eos -> SEMICOLON .)
    READ_LINE       reduce using rule 111 (eos -> SEMICOLON .)
    ELSE_IF         reduce using rule 111 (eos -> SEMICOLON .)
    $end            reduce using rule 111 (eos -> SEMICOLON .)
    RETURN          reduce using rule 111 (eos -> SEMICOLON .)
    R_BRACE         reduce using rule 111 (eos -> SEMICOLON .)


state 36

    (4) globals -> statement globals .
    $end            reduce using rule 4 (globals -> statement globals .)


state 37

    (86) func -> LET ID . L_PAREN func_params R_PAREN COLON func_type block
    (72) var_id -> ID . var_id_1
    (73) var_id -> ID .
    (74) var_id_1 -> . L_BRACKET INT_V R_BRACKET var_id_1
    (75) var_id_1 -> . L_BRACKET INT_V R_BRACKET
    L_PAREN         shift and go to state 57
    COLON           reduce using rule 73 (var_id -> ID .)
    L_BRACKET       shift and go to state 59

    var_id_1                       shift and go to state 58

state 38

    (66) var -> LET var_1 .
    NEWLINE         reduce using rule 66 (var -> LET var_1 .)
    SEMICOLON       reduce using rule 66 (var -> LET var_1 .)
    $end            reduce using rule 66 (var -> LET var_1 .)


state 39

    (67) var_1 -> var_2 . COMMA var_1
    (68) var_1 -> var_2 .
    COMMA           shift and go to state 60
    NEWLINE         reduce using rule 68 (var_1 -> var_2 .)
    SEMICOLON       reduce using rule 68 (var_1 -> var_2 .)
    $end            reduce using rule 68 (var_1 -> var_2 .)


state 40

    (69) var_2 -> var_3 . ASSIG expr
    (70) var_2 -> var_3 .
    ASSIG           shift and go to state 61
    COMMA           reduce using rule 70 (var_2 -> var_3 .)
    NEWLINE         reduce using rule 70 (var_2 -> var_3 .)
    SEMICOLON       reduce using rule 70 (var_2 -> var_3 .)
    $end            reduce using rule 70 (var_2 -> var_3 .)


state 41

    (71) var_3 -> var_id . COLON const_type
    COLON           shift and go to state 62


state 42

    (61) func_call -> ID L_PAREN . func_call_1
    (62) func_call_1 -> . expr COMMA func_call_1
    (63) func_call_1 -> . expr R_PAREN
    (64) func_call_1 -> . R_PAREN
    (26) expr -> . t_expr OR expr
    (27) expr -> . t_expr
    (28) t_expr -> . g_expr AND t_expr
    (29) t_expr -> . g_expr
    (30) g_expr -> . m_expr comparison m_expr
    (31) g_expr -> . m_expr
    (38) m_expr -> . term MINUS m_expr
    (39) m_expr -> . term PLUS m_expr
    (40) m_expr -> . term
    (41) term -> . exp_factor MOD term
    (42) term -> . exp_factor DIV term
    (43) term -> . exp_factor MULT term
    (44) term -> . exp_factor
    (45) exp_factor -> . factor EXP exp_factor
    (46) exp_factor -> . factor
    (47) factor -> . MINUS factor_1
    (48) factor -> . PLUS factor_1
    (49) factor -> . NOT factor_1
    (50) factor -> . factor_1
    (51) factor_1 -> . tens_id
    (52) factor_1 -> . tens
    (53) factor_1 -> . func_call
    (54) factor_1 -> . ID
    (55) factor_1 -> . const
    (56) factor_1 -> . L_PAREN expr R_PAREN
    (12) tens_id -> . ID tens_id_1
    (9) tens -> . L_BRACKET expr tens_1
    (61) func_call -> . ID L_PAREN func_call_1
    (5) const -> . STRING_V
    (6) const -> . BOOL_V
    (7) const -> . FLOAT_V
    (8) const -> . INT_V
    R_PAREN         shift and go to state 67
    MINUS           shift and go to state 72
    PLUS            shift and go to state 73
    NOT             shift and go to state 77
    ID              shift and go to state 63
    L_PAREN         shift and go to state 64
    L_BRACKET       shift and go to state 82
    STRING_V        shift and go to state 83
    BOOL_V          shift and go to state 84
    FLOAT_V         shift and go to state 85
    INT_V           shift and go to state 86

    func_call_1                    shift and go to state 65
    expr                           shift and go to state 66
    t_expr                         shift and go to state 68
    g_expr                         shift and go to state 69
    m_expr                         shift and go to state 70
    term                           shift and go to state 71
    exp_factor                     shift and go to state 74
    factor                         shift and go to state 75
    factor_1                       shift and go to state 76
    tens_id                        shift and go to state 78
    tens                           shift and go to state 79
    func_call                      shift and go to state 80
    const                          shift and go to state 81

state 43

    (65) assign -> ID ASSIG . expr
    (26) expr -> . t_expr OR expr
    (27) expr -> . t_expr
    (28) t_expr -> . g_expr AND t_expr
    (29) t_expr -> . g_expr
    (30) g_expr -> . m_expr comparison m_expr
    (31) g_expr -> . m_expr
    (38) m_expr -> . term MINUS m_expr
    (39) m_expr -> . term PLUS m_expr
    (40) m_expr -> . term
    (41) term -> . exp_factor MOD term
    (42) term -> . exp_factor DIV term
    (43) term -> . exp_factor MULT term
    (44) term -> . exp_factor
    (45) exp_factor -> . factor EXP exp_factor
    (46) exp_factor -> . factor
    (47) factor -> . MINUS factor_1
    (48) factor -> . PLUS factor_1
    (49) factor -> . NOT factor_1
    (50) factor -> . factor_1
    (51) factor_1 -> . tens_id
    (52) factor_1 -> . tens
    (53) factor_1 -> . func_call
    (54) factor_1 -> . ID
    (55) factor_1 -> . const
    (56) factor_1 -> . L_PAREN expr R_PAREN
    (12) tens_id -> . ID tens_id_1
    (9) tens -> . L_BRACKET expr tens_1
    (61) func_call -> . ID L_PAREN func_call_1
    (5) const -> . STRING_V
    (6) const -> . BOOL_V
    (7) const -> . FLOAT_V
    (8) const -> . INT_V
    MINUS           shift and go to state 72
    PLUS            shift and go to state 73
    NOT             shift and go to state 77
    ID              shift and go to state 63
    L_PAREN         shift and go to state 64
    L_BRACKET       shift and go to state 82
    STRING_V        shift and go to state 83
    BOOL_V          shift and go to state 84
    FLOAT_V         shift and go to state 85
    INT_V           shift and go to state 86

    expr                           shift and go to state 87
    t_expr                         shift and go to state 68
    g_expr                         shift and go to state 69
    m_expr                         shift and go to state 70
    term                           shift and go to state 71
    exp_factor                     shift and go to state 74
    factor                         shift and go to state 75
    factor_1                       shift and go to state 76
    tens_id                        shift and go to state 78
    tens                           shift and go to state 79
    func_call                      shift and go to state 80
    const                          shift and go to state 81

state 44

    (83) cond_else_if -> else_if cond_else_if .
    NEWLINE         reduce using rule 83 (cond_else_if -> else_if cond_else_if .)
    $end            reduce using rule 83 (cond_else_if -> else_if cond_else_if .)


state 45

    (82) cond_else -> ELSE block .
    NEWLINE         reduce using rule 82 (cond_else -> ELSE block .)
    $end            reduce using rule 82 (cond_else -> ELSE block .)


state 46

    (15) block -> ignored_newlines . L_BRACE block_1 R_BRACE
    L_BRACE         shift and go to state 88


state 47

    (113) ignored_newlines -> empty .
    L_BRACE         reduce using rule 113 (ignored_newlines -> empty .)


state 48

    (114) ignored_newlines -> NEWLINE . ignored_newlines
    (113) ignored_newlines -> . empty
    (114) ignored_newlines -> . NEWLINE ignored_newlines
    (112) empty -> .
    NEWLINE         shift and go to state 48
    L_BRACE         reduce using rule 112 (empty -> .)

    ignored_newlines               shift and go to state 89
    empty                          shift and go to state 47

state 49

    (78) cond -> IF L_PAREN . expr R_PAREN block cond_prima
    (26) expr -> . t_expr OR expr
    (27) expr -> . t_expr
    (28) t_expr -> . g_expr AND t_expr
    (29) t_expr -> . g_expr
    (30) g_expr -> . m_expr comparison m_expr
    (31) g_expr -> . m_expr
    (38) m_expr -> . term MINUS m_expr
    (39) m_expr -> . term PLUS m_expr
    (40) m_expr -> . term
    (41) term -> . exp_factor MOD term
    (42) term -> . exp_factor DIV term
    (43) term -> . exp_factor MULT term
    (44) term -> . exp_factor
    (45) exp_factor -> . factor EXP exp_factor
    (46) exp_factor -> . factor
    (47) factor -> . MINUS factor_1
    (48) factor -> . PLUS factor_1
    (49) factor -> . NOT factor_1
    (50) factor -> . factor_1
    (51) factor_1 -> . tens_id
    (52) factor_1 -> . tens
    (53) factor_1 -> . func_call
    (54) factor_1 -> . ID
    (55) factor_1 -> . const
    (56) factor_1 -> . L_PAREN expr R_PAREN
    (12) tens_id -> . ID tens_id_1
    (9) tens -> . L_BRACKET expr tens_1
    (61) func_call -> . ID L_PAREN func_call_1
    (5) const -> . STRING_V
    (6) const -> . BOOL_V
    (7) const -> . FLOAT_V
    (8) const -> . INT_V
    MINUS           shift and go to state 72
    PLUS            shift and go to state 73
    NOT             shift and go to state 77
    ID              shift and go to state 63
    L_PAREN         shift and go to state 64
    L_BRACKET       shift and go to state 82
    STRING_V        shift and go to state 83
    BOOL_V          shift and go to state 84
    FLOAT_V         shift and go to state 85
    INT_V           shift and go to state 86
